# interview-crash-course

./: 01_pandas_crash_course.ipynb  02_numpy_crash_course.ipynb  03_sql_crash_course.ipynb  04_statistics_crash_course.ipynb  05_machine_learning_crash_course.ipynb  06_data_cleaning_crash_course.ipynb  07_nlp_text_processing.ipynb  08_unsupervised_learning.ipynb  09_time_series.ipynb  10_deep_learning_fundamentals.ipynb  11_database_design.ipynb  12_data_engineering_fundamentals.ipynb  13_microservices_api_design.ipynb  LICENSE  README.md  main.py  pyproject.toml
